--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -6,6 +6,12 @@
 
 body {
     background-color: #0d47a1;
+    /* background-color: rgb(52, 114, 155); */
+    /* background-color: rgb(108, 177, 218); */
+    /* background-color: rgb(208, 235, 254); */
+    /* background-color: rgb(30, 84, 112); */
+    /* background-color: rgb(96, 172, 185); */
+    /* background-color: rgb(201, 235, 237); */
     color: lavender;
     font-family: "Krona One", serif;
 }
@@ -45,15 +51,20 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 100px;
+    width: 50px;
     color: #fff;
     text-decoration: none;
 }
 
 .icono-header {
-    width: 45px;
-    height: 45px;
-    margin: 10px;
+    width: 35px;
+    height: 35px;
+    /* margin: 10px; */
+}
+
+.tf-8 {
+    font-size: 14px;
+    font-family: "Krona One", serif;
 }
 
 /* Estilos Main */
@@ -257,6 +268,10 @@ a {
     width: 150px;
 }
 
+.w-45 {
+    width: 45%;
+}
+
 .w-20 {
     width: 20px;
 }
@@ -275,6 +290,23 @@ a {
 
 .w-70 {
     width: 70%;
+}
+
+.w50 {
+    width: 50%;
+}
+
+.w55 {
+    width: 55px;
+}
+
+.ml30 {
+    margin-left: 30px;
+}
+
+.spac-betw {
+    display: flex;
+    justify-content: space-between;
 }
 
 /* Estilos Registro */
@@ -445,9 +477,9 @@ a {
 }
 
 .usersession img {
-    width: 45px;
-    height: 45px;
-    margin-top: 15px;
+    width: 35px;
+    height: 35px;
+    /* margin-top: 15px; */
     border-radius: 50%;
 }
 
@@ -510,7 +542,7 @@ a {
 }
 
 .width-ico {
-    width: 25px;
+    width: 45px;
 }
 
 .center {
@@ -518,6 +550,14 @@ a {
     align-items: center;
     justify-content: center;
     text-align: center;
+}
+
+.centrado {
+    text-align: center;
+}
+
+.right {
+    text-align: right;
 }
 
 .justify {
@@ -572,12 +612,20 @@ a {
     margin-right: 30px;
 }
 
+.mr30 {
+    margin: 30px;
+}
+
 .mrb-30 {
     margin-bottom: 30px;
 }
 
 .mrl15 {
     margin-left: 15px;
+}
+
+.mrl30 {
+    margin-left: 30px;
 }
 
 .mr-20 {
@@ -649,8 +697,27 @@ a {
     overflow: hidden;
     gap: 10px;
     margin-top: 20px;
-    /* margin-bottom: 30px; */
     text-align: left;
+}
+
+.enlace-estirado-buscador {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 80vw;
+    height: 100px;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 10px;
+    text-align: left;
+}
+
+/* Filtro buscador */
+.filtro {
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    /*Todas las tarjetas que se oculten van al final*/
+    order: 1;
 }
 
 .card-foto {
@@ -685,3 +752,84 @@ a {
     align-items: left;
 }
 
+/* Membrete */
+
+.membrete {
+    display: flex;
+    justify-content: space-between;
+}
+
+.membrete p {
+    font-size: 10px;
+    line-height: 0.25px;
+}
+
+.tipo-comprobante {
+    text-align: center;
+    align-items: center;
+    border: solid 1px;
+    min-height: 90px;
+    min-width: 120px;
+    max-height: 90px;
+    max-width: 120px;
+}
+
+.tipo-comprobante p {
+    margin: 8px;
+    font-size: 8px;
+}
+
+.logo-membrete {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.logo-detalle {
+    width: 45px;
+}
+
+/* Fin Membrete */
+
+/* Imprimir */
+/* Oculta campos que no queremos imprimir */
+@media print {
+    .dontPrint {
+        display: none;
+    }
+
+    body {
+        background-color: #fff;
+    }
+}
+
+/* Ajusto la altura de la hoja a un tamaño A4 */
+.A4 {
+    display: flex;
+    /* flex-wrap: wrap; */
+    height: 950px;
+    /* height: 1300px; */
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+/* Fin print */
+
+/* Home Recepción */
+
+.contenedor-tarjeta {
+    width: 250px;
+    height: 250px;
+}
+
+.black {
+    color: #000;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.card-img {
+    width: 100px;
+    height: 100px;
+}
+
+.mr15 {
+    margin: 15px;
+}
