--- a/src/main/resources/templates/recepcion/homeRecepcion.html
+++ b/src/main/resources/templates/recepcion/homeRecepcion.html
@@ -17,35 +17,73 @@
     <!-- Header -->
     <div th:insert="~{recepcion/templateRecepcion.html::header-recepcion}" th:unless="${sesion==null}"></div>
 
-
     <!-- Main -->
     <main>
         <div class="contenedor-exito">
             <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
         </div>
+        <div class="contenedor-error">
+            <div th:if="${error}" class="alerta-error" th:text="${error}"></div>
+        </div>
 
-        <div class="contenedor-seccion">
-            <div class="seccion-img">
-                <img src="/imagenes/recepcionista.jpg" alt="recepcionista">
-            </div>
-            <div class="seccion-texto">
-                <h1>Home Recepcionista</h1>
+        <h1 class="centrado">Home Recepción</h1>
+
+        <div class="contenedor-formulario mrt-30">
+            <div class="formulario">
+                <!-- Grupo: Alta Cliente -->
+                <div class="contenedor-tarjeta">
+                    <div class="card border mr30">
+                        <a class="btn" th:href="@{/recepcion/altaCliente}">
+                            <div class="card border mr15">
+                                <img class="img-card mr30" src="/iconos/agregar-cliente.png" alt="agregar-usuario">
+                                <h5 class="center black">Alta Cliente</h5>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Grupo: Clientes -->
+                <div class="contenedor-tarjeta">
+                    <div class="card border mr30">
+                        <a class="btn" th:href="@{/recepcion/clientes}">
+                            <div class="card border mr15">
+                                <img class="img-card mr30" src="/iconos/grupo5-negro.png" alt="grupo5-negro">
+                                <h4 class="center black">Clientes</h4>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Grupo: Equipos -->
+                <div class="contenedor-tarjeta">
+                    <div class="card border mr30">
+                        <a class="btn" th:href="@{/equipo/equipos}">
+                            <div class="card border mr15">
+                                <img class="img-card mr30" src="/iconos/equipos-negro.png" alt="equipos-negro">
+                                <h4 class="center black">Equipos</h4>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Grupo: Ordenes -->
+                <div class="contenedor-tarjeta">
+                    <div class="card border mr30">
+                        <a class="btn" th:href="@{/orden/ordenes}">
+                            <div class="card border mr15">
+                                <img class="img-card mr30" src="/iconos/reparaciones-negro.png"
+                                    alt="reparaciones-negro">
+                                <h4 class="center black">Ordenes</h4>
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nisi fuga eligendi maxime nemo ex
-                    quam error molestias totam. Perferendis eius accusantium error assumenda nisi odit incidunt qui aut
-                    quasi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo eum ex, voluptates
-                    consequuntur voluptatum ad architecto rerum magnam vel deleniti impedit alias quibusdam facilis
-                    officiis. </p>
-                <br>
-                <p> Maxime ea
-                    consectetur minima molestias perspiciatis rem adipisci error enim repellendus quae inventore eum
-                    possimus magni earum architecto, repellat suscipit impedit. Animi!</p>
             </div>
         </div>
 
-
     </main>
-
+    <br><br>
 
     <!-- Footer -->
     <div th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}"></div>
