--- a/src/main/resources/templates/recepcion/templateRecepcion.html
+++ b/src/main/resources/templates/recepcion/templateRecepcion.html
@@ -8,26 +8,30 @@
                 </a>
             </div>
             <div class="menu-header">
-                <a th:href="@{/recepcion/altaCliente}"><img class="icono-header" th:src="@{/iconos/agregar-usuario.png}"
+                <a class="link-a" th:href="@{/recepcion/altaCliente}"><img class="icono-header" th:src="@{/iconos/agregar-usuario.png}"
                         alt="agregar-usuario">
+                    <p>Alta</p>
                 </a>
-                <a th:href="@{/recepcion/clientes}"><img class="icono-header" th:src="@{/iconos/grupo5.png}"
+                <a class="link-a" th:href="@{/recepcion/clientes}"><img class="icono-header" th:src="@{/iconos/grupo5.png}"
                         alt="clientes-blanco">
+                    <p>Clientes</p>
                 </a>
-                <a th:href="@{/equipo/equipos}"><img class="icono-header" th:src="@{/iconos/equipos.png}" alt="equipos">
+                <a class="link-a" th:href="@{/equipo/equipos}"><img class="icono-header" th:src="@{/iconos/equipos.png}" alt="equipos">
+                    <p>Equipos</p>
                 </a>
-                <a th:href="@{/orden/ordenes}"><img class="icono-header" th:src="@{/iconos/reparaciones.png}"
+                <a class="link-a" th:href="@{/orden/ordenes}"><img class="icono-header" th:src="@{/iconos/reparaciones.png}"
                         alt="reparacion">
+                    <p>Ordenes</p>
                 </a>
                 <!-- Usuario con dropdown -->
-                <div class="usersession">
+                <div class="usersession mrt-5">
                     <div class="dropdown">
 
-                        <div class="width-ico mr30" type="button" data-bs-toggle="dropdown" aria-expanded="true">
+                        <div class="width-ico" type="button" data-bs-toggle="dropdown" aria-expanded="true">
                             <div class="center w70">
                                 <img class="circle" th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
                             </div>
-                            <p class="user-name mrt-5" th:text="${usuario.nombreUsuario}"></p>
+                            <p class="user-name" th:text="${usuario.nombreUsuario}"></p>
                         </div>
 
                         <ul class="dropdown-menu w220">
@@ -74,7 +78,7 @@
                                     </a>
                                 </div>
                             </li>
-                            
+
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
                                     <a class="black" th:href="@{/usuario/cerrar}">
