--- a/src/main/resources/templates/recepcion/templateRecepcion.html
+++ b/src/main/resources/templates/recepcion/templateRecepcion.html
@@ -8,19 +8,20 @@
                 </a>
             </div>
             <div class="menu-header">
-                <a class="link-a" th:href="@{/recepcion/altaCliente}"><img class="icono-header" th:src="@{/iconos/agregar-usuario.png}"
-                        alt="agregar-usuario">
+                <a class="link-a" th:href="@{/recepcion/altaCliente}"><img class="icono-header"
+                        th:src="@{/iconos/agregar-usuario.png}" alt="agregar-usuario">
                     <p>Alta</p>
                 </a>
-                <a class="link-a" th:href="@{/recepcion/clientes}"><img class="icono-header" th:src="@{/iconos/grupo5.png}"
-                        alt="clientes-blanco">
+                <a class="link-a" th:href="@{/recepcion/clientes}"><img class="icono-header"
+                        th:src="@{/iconos/grupo5.png}" alt="clientes-blanco">
                     <p>Clientes</p>
                 </a>
-                <a class="link-a" th:href="@{/equipo/equipos}"><img class="icono-header" th:src="@{/iconos/equipos.png}" alt="equipos">
+                <a class="link-a" th:href="@{/equipo/equipos}"><img class="icono-header" th:src="@{/iconos/equipos.png}"
+                        alt="equipos">
                     <p>Equipos</p>
                 </a>
-                <a class="link-a" th:href="@{/orden/ordenes}"><img class="icono-header" th:src="@{/iconos/reparaciones.png}"
-                        alt="reparacion">
+                <a class="link-a" th:href="@{/orden/ordenes}"><img class="icono-header"
+                        th:src="@{/iconos/reparaciones.png}" alt="reparacion">
                     <p>Ordenes</p>
                 </a>
                 <!-- Usuario con dropdown -->
@@ -50,15 +51,12 @@
 
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
-                                    <a class="black" th:href="@{/recepcion/editarRecepcion}">
-                                        <div class="dos-columnas">
-                                            <div class="center">
-                                                <img class="w20" th:src="@{/iconos/sobre-nosotros-negro.png}"
-                                                    alt="usuario">
-                                            </div>
-                                            <div class="w-150 mrt-10">
-                                                <p class="tf-8">Editar Perfil</p>
-                                            </div>
+                                    <a class="black dos-columnas-menu" th:href="@{/recepcion/editarRecepcion}">
+                                        <div class="center">
+                                            <img class="w20" th:src="@{/iconos/sobre-nosotros-negro.png}" alt="usuario">
+                                        </div>
+                                        <div class=" mrt-10">
+                                            <p class="tf-14">Editar Perfil</p>
                                         </div>
                                     </a>
                                 </div>
@@ -66,14 +64,12 @@
 
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
-                                    <a class="black" th:href="@{/recepcion/cambiarContrasena}">
-                                        <div class="dos-columnas">
-                                            <div class="center">
-                                                <img class="w20" th:src="@{/iconos/contrasena.png}" alt="usuario">
-                                            </div>
-                                            <div class="w-150 mrt-10">
-                                                <p class="tf-8">Cambiar Contraseña</p>
-                                            </div>
+                                    <a class="black dos-columnas-menu" th:href="@{/recepcion/cambiarContrasena}">
+                                        <div class="center">
+                                            <img class="w20" th:src="@{/iconos/contrasena.png}" alt="usuario">
+                                        </div>
+                                        <div class="w-150 mrt-10">
+                                            <p class="tf-14">Cambiar Contraseña</p>
                                         </div>
                                     </a>
                                 </div>
@@ -81,14 +77,12 @@
 
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
-                                    <a class="black" th:href="@{/usuario/cerrar}">
-                                        <div class="dos-columnas">
-                                            <div class="center">
-                                                <img class="w20" th:src="@{/iconos/btn_power.png}" alt="salir">
-                                            </div>
-                                            <div class="w-150 mrt-10">
-                                                <p class="tf-8">Cerrar Sesión</p>
-                                            </div>
+                                    <a class="black dos-columnas-menu" th:href="@{/usuario/cerrar}">
+                                        <div class="center">
+                                            <img class="w20" th:src="@{/iconos/btn_power.png}" alt="salir">
+                                        </div>
+                                        <div class="w-150 mrt-10">
+                                            <p class="tf-14">Cerrar Sesión</p>
                                         </div>
                                     </a>
                                 </div>
