--- a/src/main/resources/templates/clientes/editar.html
+++ b/src/main/resources/templates/clientes/editar.html
@@ -162,7 +162,7 @@
                     <a class="btn btn-secondary mr-30" th:href="@{/recepcion/clientes}"><img class="w25"
                             th:src="@{/iconos/cancelar.png}" alt="cancelar"> Cancelar</a>
                     <button type="submit" class="btn btn-dark ml10"><img class="w25" th:src="@{/iconos/guardar.png}"
-                            alt="guardar"> Guardar Cambios</button>
+                            alt="guardar"> Guardar</button>
                 </div>
             </form>
         </div>
