--- a/src/main/resources/templates/equipos/altaEquipo.html
+++ b/src/main/resources/templates/equipos/altaEquipo.html
@@ -39,7 +39,7 @@
                         <div class="w100 center mrt-10">
                             <label for="img" class="btn btn-dark"><img class="w25 mr-10"
                                     th:src="@{/iconos/felicidad.png}" alt="felicidad">
-                                Subí una foto</label>
+                                Subir foto</label>
                         </div>
                         <div class="oculto">
                             <input type="file" class="form-control-file btn" id="img" name="img">
@@ -141,7 +141,7 @@
                     <a class="btn btn-secondary mr-30" th:href="@{/recepcion/clientes}"><img class="w25"
                             th:src="@{/iconos/cancelar.png}" alt="cancelar"> Cancelar</a>
                     <button type="submit" class="btn btn-dark ml10"><img class="w25" th:src="@{/iconos/guardar.png}"
-                            alt="guardar"> Guardar Cambios</button>
+                            alt="guardar"> Guardar</button>
                 </div>
             </form>
 
