--- a/src/main/resources/templates/equipos/equiposCliente.html
+++ b/src/main/resources/templates/equipos/equiposCliente.html
@@ -103,8 +103,7 @@
                                 <input type="hidden" name="equipoId" th:value="${equipo.IdEquipo}">
                                 <input type="hidden" name="clienteId" th:value="${equipo.cliente.IdCliente}">
                                 <button type="submit" class="btn btn-dark" style="color: white;">
-                                    <img class="w25" th:src="@{/iconos/reparacion.png}" alt="reparacion"> Orden
-                                    Reparación
+                                    <img class="w25" th:src="@{/iconos/reparacion.png}" alt="reparacion"> Alta Orden
                                 </button>
                             </form>
                         </div>
