--- a/src/main/resources/templates/recepcion/homeRecepcion.html
+++ b/src/main/resources/templates/recepcion/homeRecepcion.html
@@ -33,7 +33,7 @@
                 <!-- Grupo: Alta Cliente -->
                 <div class="contenedor-tarjeta">
                     <div class="card border mr30">
-                        <a class="btn" th:href="@{/recepcion/altaCliente}">
+                        <a th:href="@{/recepcion/altaCliente}">
                             <div class="card border mr15">
                                 <img class="img-card mr30" src="/iconos/agregar-cliente.png" alt="agregar-usuario">
                                 <h5 class="center black">Alta Cliente</h5>
@@ -45,7 +45,7 @@
                 <!-- Grupo: Clientes -->
                 <div class="contenedor-tarjeta">
                     <div class="card border mr30">
-                        <a class="btn" th:href="@{/recepcion/clientes}">
+                        <a th:href="@{/recepcion/clientes}">
                             <div class="card border mr15">
                                 <img class="img-card mr30" src="/iconos/grupo5-negro.png" alt="grupo5-negro">
                                 <h4 class="center black">Clientes</h4>
@@ -57,7 +57,7 @@
                 <!-- Grupo: Equipos -->
                 <div class="contenedor-tarjeta">
                     <div class="card border mr30">
-                        <a class="btn" th:href="@{/equipo/equipos}">
+                        <a th:href="@{/equipo/equipos}">
                             <div class="card border mr15">
                                 <img class="img-card mr30" src="/iconos/equipos-negro.png" alt="equipos-negro">
                                 <h4 class="center black">Equipos</h4>
@@ -69,7 +69,7 @@
                 <!-- Grupo: Ordenes -->
                 <div class="contenedor-tarjeta">
                     <div class="card border mr30">
-                        <a class="btn" th:href="@{/orden/ordenes}">
+                        <a th:href="@{/orden/ordenes}">
                             <div class="card border mr15">
                                 <img class="img-card mr30" src="/iconos/reparaciones-negro.png"
                                     alt="reparaciones-negro">
