--- a/src/main/resources/templates/recepcion/templateRecepcion.html
+++ b/src/main/resources/templates/recepcion/templateRecepcion.html
@@ -68,7 +68,7 @@
                                         <div class="center">
                                             <img class="w20" th:src="@{/iconos/contrasena.png}" alt="usuario">
                                         </div>
-                                        <div class="w-150 mrt-10">
+                                        <div class="mrt-10">
                                             <p class="tf-14">Cambiar Contraseña</p>
                                         </div>
                                     </a>
@@ -81,7 +81,7 @@
                                         <div class="center">
                                             <img class="w20" th:src="@{/iconos/btn_power.png}" alt="salir">
                                         </div>
-                                        <div class="w-150 mrt-10">
+                                        <div class="mrt-10">
                                             <p class="tf-14">Cerrar Sesión</p>
                                         </div>
                                     </a>
