--- a/src/main/resources/templates/usuario/cambiarContrasena.html
+++ b/src/main/resources/templates/usuario/cambiarContrasena.html
@@ -90,7 +90,7 @@
                     <a class="btn btn-secondary mr-30" th:href="@{/}"><img class="w25" th:src="@{/iconos/cancelar.png}"
                         alt="cancelar"> Cancelar</a>
                     <button type="submit" class="btn btn-dark"><img class="w25  mr-10" th:src="@{/iconos/felicidad.png}"
-                            alt="felicidad"> Cambiar Contraseña</button>
+                            alt="felicidad">Cambiar</button>
                 </div>
 
             </form>
