--- a/src/main/resources/templates/usuario/templateUsuario.html
+++ b/src/main/resources/templates/usuario/templateUsuario.html
@@ -9,13 +9,13 @@
                 </a>
             </div>
             <div class="menu-header">
-                <a th:href="@{/usuario/iniciarSesion}"><img class="icono-header" th:src="@{/iconos/login.png}"
+                <a class="link-a" th:href="@{/usuario/iniciarSesion}"><img class="icono-header" th:src="@{/iconos/login.png}"
                         alt="login">
-                    Iniciar Sesión
+                   <p>Login</p>
                 </a>
-                <a th:href="@{/usuario/registro}"><img class="icono-header" th:src="@{/iconos/registro.png}"
+                <a class="link-a" th:href="@{/usuario/registro}"><img class="icono-header" th:src="@{/iconos/registro.png}"
                         alt="registro">
-                    Registro
+                    <p>Registro</p>
                 </a>
             </div>
         </div>
