--- a/src/main/resources/templates/usuario/templateUsuario.html
+++ b/src/main/resources/templates/usuario/templateUsuario.html
@@ -76,7 +76,7 @@
 
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
-                                    <a class="black dos-columnas-menu" th:href="@{/recepcion/editarRecepcion}">
+                                    <a class="black dos-columnas-menu" th:href="@{/usuario/editar}">
                                         <div class="center">
                                             <img class="w20" th:src="@{/iconos/sobre-nosotros-negro.png}" alt="usuario">
                                         </div>
@@ -89,7 +89,7 @@
 
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
-                                    <a class="black dos-columnas-menu" th:href="@{/recepcion/cambiarContrasena}">
+                                    <a class="black dos-columnas-menu" th:href="@{/usuario/cambiarContrasena}">
                                         <div class="center">
                                             <img class="w20" th:src="@{/iconos/contrasena.png}" alt="usuario">
                                         </div>
