--- a/src/main/resources/templates/tecnico/homeTecnico.html
+++ b/src/main/resources/templates/tecnico/homeTecnico.html
@@ -1,15 +1,73 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
+
+<head>
+    <title>Recepción Equipos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link th:href="@{/css/estilos.css}" rel="stylesheet">
+</head>
+
+<body>
+
+    <!-- Header -->
+    <div th:insert="~{tecnico/templateTecnico.html::header-tecnico}" th:unless="${sesion==null}"></div>
+
+    <!-- Main -->
+    <main>
+        <div class="contenedor-exito">
+            <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
+        </div>
+        <div class="contenedor-error">
+            <div th:if="${error}" class="alerta-error" th:text="${error}"></div>
+        </div>
+
+        <h1 class="centrado">Home Técnico</h1>
+
+        <div class="contenedor-formulario mrt-30">
+            <div class="formulario">
+
+                <!-- Grupo: Equipos -->
+                <div class="contenedor-tarjeta">
+                    <div class="card border mr30">
+                        <a th:href="@{/equipo/equipos}">
+                            <div class="card border mr15">
+                                <img class="img-card mr30" src="/iconos/equipos-negro.png" alt="equipos-negro">
+                                <h4 class="center black">Equipos</h4>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Grupo: Ordenes -->
+                <div class="contenedor-tarjeta">
+                    <div class="card border mr30">
+                        <a th:href="@{/orden/ordenes}">
+                            <div class="card border mr15">
+                                <img class="img-card mr30" src="/iconos/reparaciones-negro.png"
+                                    alt="reparaciones-negro">
+                                <h4 class="center black">Ordenes</h4>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <br>
+            </div>
+        </div>
+
+    </main>
+    <br><br>
+
+    <!-- Footer -->
+    <div th:insert="~{tecnico/templateTecnico.html::footer-tecnico}"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
