--- a/src/main/resources/templates/usuario/homeUsuario.html
+++ b/src/main/resources/templates/usuario/homeUsuario.html
@@ -6,25 +6,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link th:href="@{/css/estilos.css}" rel="stylesheet">
 </head>
 
 <body>
     <!-- Header -->
-    <div th:insert="~{usuario/templateUsuario.html::header-user}" th:unless="${sesion==null}"></div>
+
+    <div th:insert="~{usuario/templateUsuario.html::header-user-sin-rol}" th:unless="${sesion==null}"></div>
 
     <!-- Main -->
     <main>
         <div class="contenedor-exito">
             <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
         </div>
-
+        <br><br><br><br>
         <div class="contenedor-seccion">
             <div class="seccion-img">
-                <img src="imagenes/bienvenido.jpg" alt="">
+                <img src="/imagenes/bienvenido.jpg" alt="img">
             </div>
             <div class="seccion-texto">
-                <h1>Ya sos parte de Recepción de Equipos.</h1>
+                <h1>Ya sos parte de nuestro equipo.</h1>
                 <br>
                 <h3>¡Por favor solicita al Administrador que te asigne tu Rol correspondiente!</h3>
                 <br>
@@ -32,14 +35,17 @@
             </div>
         </div>
 
-        <br>
+        <br><br><br><br>
 
 
     </main>
 
 
     <!-- Footer -->
-    <div th:insert="~{usuario/templateUsuario.html::footer-user}"></div>
+    <div th:insert="~{usuario/templateUsuario.html::footer-user-sin-rol}"></div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
